tests/rustdoc-ui/invalid_const_in_type_position.rs
use std::ops::Generator;

fn gen() -> impl Generator<{}> {}
//~^ERROR constant provided when a type was expected
